--- a/app/views/spree/admin/overview/_abandoned_carts.html.erb
+++ b/app/views/spree/admin/overview/_abandoned_carts.html.erb
@@ -9,7 +9,7 @@
     <% @abandoned_carts.each_with_index do |v,i| %>
       <div class='pie-element'>
         <i style='background-color:<%= @pie_colors[i] %>'>&nbsp;</i>
-        <label><%= truncate v[0], length: 35 %></label>
+        <label><%= v[0].truncate(35) %></label>
         <span><%= number_with_delimiter v[1] %> <%= t('spree.simple_dash.units') %></span>
       </div>
     <% end %>
