--- a/app/views/spree/admin/overview/_best_selling_taxons.html.erb
+++ b/app/views/spree/admin/overview/_best_selling_taxons.html.erb
@@ -9,7 +9,7 @@
     <% @best_selling_taxons.each_with_index do |t,i| %>
       <div class='pie-element'>
         <i style='background-color:<%= @pie_colors[i] %>'>&nbsp;</i>
-        <label><%= truncate t[0], length: 35 %></label>
+        <label><%= t[0].truncate(35) %></label>
         <span><%= number_with_delimiter t[1] %> <%= t('spree.simple_dash.units') %></span>
       </div>
     <% end %>
