Add abandoned carts by day graph

--- a/app/assets/stylesheets/spree/backend/dashboard.css.erb
+++ b/app/assets/stylesheets/spree/backend/dashboard.css.erb
@@ -1,4 +1,4 @@
-.dashboard_main #orders_by_day_options {
+.dashboard_main #by_day_options {
   background-color: #0095DA;
   -moz-border-radius-bottomleft: 10px;
   -moz-border-radius-bottomright: 10px;
@@ -71,7 +71,7 @@
   margin-top: -10px;
 }
 
-.dashboard_main #orders_by_day_options label {
+.dashboard_main #by_day_options label {
   padding: 0px 10px;
 }
 
