--- a/app/views/spree/admin/overview/index.html.erb
+++ b/app/views/spree/admin/overview/index.html.erb
@@ -24,6 +24,7 @@
       <div class='dashboard-historical-sales row'>
         <%= render partial: 'spree/admin/overview/orders_by_day' %>
         <%= render partial: 'spree/admin/overview/abandoned_carts_by_day' %>
+        <%= render partial: 'spree/admin/overview/new_users_by_day' %>
         <%= render partial: 'spree/admin/overview/by_day_options' %>
       </div>
     </div>
@@ -47,6 +48,7 @@
     <%= javascript_tag do -%>
       var orders_by_day_points = [[ <%== @orders_by_day.map { |day| "[\"#{day[0]}\",#{day[1]}]" }.join(",") %> ]];
       var abandoned_carts_by_day_points = [[ <%== @abandoned_carts_by_day.map { |day| "[\"#{day[0]}\",#{day[1]}]" }.join(",") %> ]];
+      var new_users_by_day_points = [[ <%== @new_users_by_day.map { |day| "[\"#{day[0]}\",#{day[1]}]" }.join(",") %> ]];
       var best_selling_variants_points = [ <%== @best_selling_variants.map { |v| "[\"#{h(v[0])}\",#{v[1]}]" }.join(",") %> ];
       var top_grossing_variants_points = [ <%== @top_grossing_variants.map { |v| "[\"#{h(v[0])}\",#{v[1]}]" }.join(",") %> ];
       var best_selling_taxons_points = [ <%== @best_selling_taxons.map { |t| "[\"#{h(t[0])}\",#{t[1]}]" }.join(",") %> ];
@@ -56,6 +58,7 @@
 
       var orders = "<%= t('spree.simple_dash.orders') %>";
       var abandoned_orders = "<%= t('spree.simple_dash.abandoned_orders') %>";
+      var new_users = "<%= t('spree.simple_dash.new_users') %>";
       var by_day = "<%= t('spree.simple_dash.by_day') %>";
 
       var pie_colors = [<%== @pie_colors.map{|c| "'#{c}'"}.join(",") %>];
